--- a/pyFlaskOpenCV-master/README
+++ b/pyFlaskOpenCV-master/README
@@ -1,4 +1,4 @@
-Go to https://apricot-cupcake-90327.herokuapp.com to try out this web app.
+Go to https://sunghoon.pythonanywhere.com to try out this web app.
 
 Note: might take a little time to load
 
