--- a/pyFlaskOpenCV-master/README
+++ b/pyFlaskOpenCV-master/README
@@ -3,3 +3,18 @@ Go to https://sunghoon.pythonanywhere.com to try out this web app.
 Note: might take a little time to load
 
 You can upload an image or a few images and select an art style that can be applied to this image.
+
+# Neural style transfer website using deep learning
+Use Flask to create a website that transforms the style of a picture into an artist's style 
+
+### Requirements
+1. Flask
+2. Pretrained model (Using https://github.com/Reine0017/pyFlaskOpenCV/tree/master/static/models)
+3. See also requirements.txt
+
+
+#### Reference
+(https://github.com/Reine0017/pyFlaskOpenCV)
+
+# Implementation
+<img src="NST.PNG" width="700">
