--- a/pyFlaskOpenCV-master/README
+++ b/pyFlaskOpenCV-master/README
@@ -1,4 +1,5 @@
-# Neural style transfer website using deep learning
+
+## Neural style transfer website using deep learning
 Use Flask to create a website that transforms the style of a picture into an artist's style 
 
 ### Requirements
